# CSim

./: #main.cpp#  .gitignore  CMakeCache.txt  CSim.sln  Makefile  README.md  cmake_install.cmake  glfw_app.sln
CSim/: CMakeLists.txt  CONTRIBUTING.md  CSim.vcxproj  CSim.vcxproj.filters  MyCanvas.csim  big_canvas.csim  log.txt
CSim-Launcher/: .gitignore  CMakeLists.txt  README.md
CSim-Launcher/Source/: Main.cpp  _GLOBALS.h  cApp.cpp  cApp.h
CSim-Win/: CSim-Win.aps  CSim-Win.cpp  CSim-Win.rc  CSim-Win.sln  CSim-Win.vcxproj  CSim-Win.vcxproj.filters  README.md  Resource.h
CSim/Shader/: triangle_frag.glsl
CSim/Source/: ABOUT_STATE.md  AllSets.h  BrainsBrainRuleSet.h  BriansBrainRuleSet.cpp  CellBrush.h  CellCanvas.cpp  CellCanvas.h  CellCommandLine.h  CellEditState.cpp  CellEditState.h  CellLoadState.cpp  CellLoadState.h  CellLogger.cpp  CellLogger.h  CellMain.cpp  CellMain.h  CellNormalState.cpp  CellNormalState.h  CellPencilBrush.h  CellRuleSet.cpp  CellRuleSet.h  CellSaveState.cpp  CellSaveState.h  CellState.h  DayAndNightRuleSet.cpp  DayAndNightRuleSet.h  GameOfLifeRuleSet.cpp  GameOfLifeRuleSet.h  HighlifeRuleSet.cpp  HighlifeRuleSet.h  LifeWithoutDeathRuleSet.cpp  LifeWithoutDeathRuleSet.h  MacroDefs.h  README.md  RenderContext.h  RenderFont.cpp  RenderFont.h  RenderWindow.cpp  RenderWindow.h  SaveLoad.h  (+6 more)
CSim/Source/AssetLoaders/: TTFLoader.h
CSim/Source/Core/: README.txt
CSim/Source/Init/: AllSets.h  AllState.h  BuildInfo.h  MacroDefs.cpp  MacroDefs.h  README.md
CSim/Source/Platform/: README.md
CSim/Source/Platform/Linux/: GTKRenderWindow.h  LinuxSaveLoad.cpp  README.md  _main.cpp
CSim/Source/Platform/Windows/: WinMain.cpp  WinSaveLoad.cpp
CSim/Source/Platform/macOS/: CocoaRenderWindow.cpp  CocoaRenderWindow.h  README.md
CSim/Source/Platform/macOS/Shaders/: README.txt
CSim/Source/Rulesets/: BrainsBrainRuleSet.h  BriansBrainRuleSet.cpp  CellRuleSet.cpp  CellRuleSet.h  DayAndNightRuleSet.cpp  DayAndNightRuleSet.h  GameOfLifeRuleSet.cpp  GameOfLifeRuleSet.h  HighlifeRuleSet.cpp  HighlifeRuleSet.h  LifeWithoutDeathRuleSet.cpp  LifeWithoutDeathRuleSet.h  Rule90RuleSet.cpp  Rule90RuleSet.h  SeedsRuleSet.cpp  SeedsRuleSet.h
CSim/Source/Tests/: README.md  TestLogger.cpp  log.txt  makefile
csim-windows-launcher/: csim-windows-launcher.cpp  csim-windows-launcher.rc  csim-windows-launcher.vcxproj  csim-windows-launcher.vcxproj.filters  framework.h
glfw_app/: glfw_app.vcxproj  glfw_app.vcxproj.filters  main.cpp  triangle_frag.glsl  triangle_vertex.glsl
glfw_app/Source/: AllSets.h  BrainsBrainRuleSet.h  BriansBrainRuleSet.cpp  CellCanvas.cpp  CellCanvas.h  CellEditState.cpp  CellEditState.h  CellNormalState.cpp  CellNormalState.h  CellRuleSet.cpp  CellRuleSet.h  CellState.h  DayAndNightRuleSet.cpp  DayAndNightRuleSet.h  GameOfLifeRuleSet.cpp  GameOfLifeRuleSet.h  HighlifeRuleSet.cpp  HighlifeRuleSet.h  LifeWithoutDeathRuleSet.cpp  LifeWithoutDeathRuleSet.h  RenderContext.h  RenderWindow.cpp  RenderWindow.h  SeedsRuleSet.cpp  SeedsRuleSet.h  main.cpp
glfw_app/glfw_app/x64/Debug/: glfw_app.exe.recipe  vc143.idb
glfw_app/glfw_app/x64/Debug/glfw_app.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  glfw_app.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
